--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,12 @@
 *.png
 *.jpg
 *.svg
+*.xml
 data
 data_processing/fetch/rym/rymscraper
+
+# Jetbrain
+.idea/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
